k8s/template/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __NAME__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __NAME__
  template:
    metadata:
      labels:
        app: __NAME__
    spec:
      containers:
        - name: frontend
          image: petlog/frontend:__IMAGE_TAG__
          ports:
            - containerPort: 80
