k8s/template/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __NAME__
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.petlog.kro.kr
      secretName: tls-secret
  rules:
    - host: www.petlog.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __NAME__
                port:
                  number: 80
